[package]
name = "yield-progress"
version = "0.1.1"
edition = "2021"
rust-version = "1.63.0"
description = "Combined progress reporting and cooperative task yielding."
repository = "https://github.com/kpreid/yield-progress"
license = "MIT OR Apache-2.0"
categories = ["asynchronous", "gui", "wasm"]
keywords = ["yield", "progressbar"]
publish = true
exclude = [".github", ".vscode"]

[dependencies]
# Used for logging over-long intervals between yields. TODO: This should be pluggable and optional
log = { version = "0.4.17", default-features = false }
# Used for reading the current time on wasm. TODO: This should be pluggable and optional
instant = { version = "0.1.12" }

[dev-dependencies.tokio]
version = "1.28.0"
default-features = false
features = [
    "rt",
    "sync", # for gathering data in tests
    "macros", # for tokio::main and tokio::test in tests and examples
    "signal", # for interactive cancellation example
    "time",  # for examples
]
